<resources>
    <string name="app_name">TNSTC BUS PASS</string>
    <string name="s_no">S.NO</string>
    <string name="id_no">ID NO</string>
    <string name="new_old">NEW/OLD</string>
    <string name="receipt_no">RECEIPT NO</string>
    <string name="date">DATE</string>
    <string name="name">NAME</string>
    <string name="form">FORM</string>
    <string name="to">TO</string>
    <string name="bus_fare">BUS FARE</string>
    <string name="amount">AMOUNT</string>
    <string name="submit">SUBMIT</string>
    <string name="dashboard">Dashboard</string>
    <string name="exp_del">EXP/DEL</string>
    <string name="cellnumber">CELL NUMBER</string>
    <string name="Month">Month</string>
    <string name="selectAll">Select all</string>
    <string name="generateQr">Generate QR</string>
    <string name="selected">\" selected\"</string>
    <string name="deselectAll">Deselect all</string>
    <string name="areYouSureWantToDelete">Are you sure want to delete ?</string>
    <string name="no">NO</string>
    <string name="selectItemsToDelete">Select items to delete</string>
    <string name="Year">Year</string>
    <string name="delete">Delete</string>
    <string name="cardvalue">CARD</string>
    <string name="_280">280</string>
    <string name="_240">240</string>
    <string name="_200">200</string>
    <string name="_5">5</string>
    <string name="st">ST</string>
    <string name="_6">6</string>
    <string name="uv">UV</string>
    <string name="_7">7</string>
    <string name="_BA">BA</string>
    <string name="_320">320</string>
    <string name="_8">8</string>
    <string name="bb">BB</string>
    <string name="_360">360</string>
    <string name="_9">9</string>
    <string name="bc">BC</string>
    <string name="_400">400</string>
    <string name="_440">440</string>
    <string name="_480">480</string>
    <string name="_520">520</string>
    <string name="_560">560</string>
    <string name="_600">600</string>
    <string name="_640">640</string>
    <string name="_720">720</string>
    <string name="_680">680</string>
    <string name="_760">760</string>
    <string name="card">CARD</string>
    <string name="key">KEY</string>
    <string name="spare">SPARE</string>
    <string name="opening_no">OPENING NO</string>
    <string name="closing_no">CLOSING NO</string>


    <string name="opening">OPENING</string>
    <string name="closing">CLOSING</string>
    <string name="totalcard">TOTALCARD</string>
    <string name="scales_amount">SCALES AMOUNT</string>
    <string name="balance_card">BALANCE CARD</string>
    <string name="start_balance_inventory">START BALANCE INVENTORY</string>
    <string name="scales_details">SCALES DETAILS</string>
    <string name="balance_details">BALANCE DETAILS</string>
    <string name="month_open">MONTH OPEN</string>
    <string name="passentry">Pass  Entry</string>
    <string name="swipe">Swipe</string>
    <string name="passdailylist">Daily Report</string>
    <string name="monthly_pass_report">Monthly Report</string>
    <string name="mst_entry">Mst Entry</string>
    <string name="_100">100</string>
    <string name="_120">120</string>
    <string name="_140">140</string>
    <string name="_160">160</string>
    <string name="_180">180</string>
    <string name="_220">220</string>
    <string name="_260">260</string>
    <string name="_300">300</string>
    <string name="_340">340</string>
    <string name="_380">380</string>
    <string name="_passlist">PassList</string>
</resources>