<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_txt"
            android:text="@string/Month"
            android:layout_marginLeft="10dp"
            android:padding="15dp"
            android:textStyle="bold"
            app:textAllCaps="true"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/year"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_txt"
            android:text="@string/Year"
            android:padding="15dp"
            app:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/til_repno"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/month"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sno"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toStartOf="@+id/til_ino"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/month">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tei_sno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/s_no"
                android:maxLength="10"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ino"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toStartOf="@+id/til_repno"
            app:layout_constraintStart_toEndOf="@+id/til_sno"
            app:layout_constraintTop_toBottomOf="@id/month">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tei_ino"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/id_no"
                android:maxLength="10"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_repno"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/til_ino"
            app:layout_constraintTop_toBottomOf="@id/month">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tei_repno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/receipt_no"
                android:maxLength="10"
                android:imeOptions="actionNext"
                android:nextFocusForward="@string/name"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_new_old"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@id/til_sno"
            app:layout_constraintTop_toBottomOf="@id/til_sno">

            <AutoCompleteTextView
                android:id="@+id/act_new_old"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:hint="@string/new_old" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_txt"
            android:drawableRight="@drawable/ic_calendar_interface_symbol_tool"
            android:gravity="center"
            android:hint="@string/date"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@id/til_new_old"
            app:layout_constraintEnd_toEndOf="@id/til_repno"
            app:layout_constraintStart_toEndOf="@+id/til_new_old"
            app:layout_constraintTop_toTopOf="@id/til_new_old" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/til_new_old"
            app:layout_constraintTop_toBottomOf="@+id/til_new_old">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tei_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:nextFocusForward="@string/bus_fare"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_form"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/til_to"
            app:layout_constraintStart_toStartOf="@id/til_name"
            app:layout_constraintTop_toBottomOf="@+id/til_name">

            <AutoCompleteTextView
                android:id="@+id/act_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="false"
                android:editable="false"
                android:hint="@string/form" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_to"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/til_form"
            app:layout_constraintEnd_toEndOf="@id/til_name"
            app:layout_constraintStart_toEndOf="@+id/til_form"
            app:layout_constraintTop_toTopOf="@+id/til_form">

            <AutoCompleteTextView
                android:id="@+id/act_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="false"
                android:editable="false"
                android:hint="@string/to" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_bus_fare"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/txt_total_amount"
            app:layout_constraintStart_toStartOf="@id/til_form"
            app:layout_constraintTop_toBottomOf="@+id/til_form">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tei_bus_fare"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/bus_fare"
                android:imeOptions="actionNext"
                android:nextFocusForward="@string/cellnumber"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_total_amount"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/background_txt"
            android:drawableRight="@drawable/ic_rupee"
            android:gravity="center"
            android:hint="@string/amount"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/til_bus_fare"
            app:layout_constraintEnd_toEndOf="@id/til_to"
            app:layout_constraintStart_toEndOf="@+id/til_bus_fare"
            app:layout_constraintTop_toTopOf="@+id/til_bus_fare" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_exp_del"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/til_cell_number"
            app:layout_constraintStart_toStartOf="@id/til_bus_fare"
            app:layout_constraintTop_toBottomOf="@+id/til_bus_fare">

            <AutoCompleteTextView
                android:id="@+id/act_exp_del"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="false"
                android:editable="false"
                android:hint="@string/exp_del" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_cell_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/til_exp_del"
            app:layout_constraintEnd_toEndOf="@id/txt_total_amount"
            app:layout_constraintStart_toEndOf="@+id/til_exp_del"
            app:layout_constraintTop_toTopOf="@+id/til_exp_del">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tei_cell_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/cellnumber"
                android:maxLength="10"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="20dp"
            android:text="@string/submit"
            android:textColor="@color/coloWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/til_cell_number"
            app:layout_constraintStart_toStartOf="@+id/til_exp_del"
            app:layout_constraintTop_toBottomOf="@+id/til_exp_del"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>